# secure-python-pipeline

./: .gitignore  .plumber.yaml  .poutine.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements-fuzz.in  requirements-fuzz.txt  requirements-test.in  requirements-test.txt  requirements-tools.in  requirements-tools.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  fuzz.yml  plumber.yml  release.yml  scorecard.yml  verify-slsa.yml
fuzz/: fuzz_api.py
src/app/: main.py
tests/: test_main.py
