[project]
name = "secure-python-pipeline"
version = "1.0.0"
description = "Démonstration d'un pipeline CI/CD sécurisé"
requires-python = ">=3.11"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, S = bandit (flake8-bandit),
# B = bugbear, C4 = comprehensions, UP = pyupgrade
select = ["E", "F", "I", "S", "B", "C4", "UP"]

[tool.ruff.lint.per-file-ignores]
# S101 = usage d'assert, normal dans les tests pytest
"tests/**/*.py" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
